<resources>
    <string name="app_name">SDKDemo</string>
    <string name="shared_prefs_account_info">account_info</string>
    <string name="shared_prefs_video_info">video_info</string>
    <string name="shared_prefs_setting_info">setting_info</string>
    <string name="share_whiteboard">白板</string>
    <string name="more_recording">录制中</string>
    <string name="more_living">直播中</string>
    <string name="more_open_record">开启录制</string>
    <string name="more_close_record">关闭录制</string>
    <string name="more_open_live">开启直播</string>
    <string name="more_close_live">关闭直播</string>
    <string name="more_show_small_view">开启画中画</string>
    <string name="more_hide_small_view">关闭画中画</string>
    <string name="more_additional_time">延长会议</string>
    <string name="participants_close">关闭</string>
    <string name="participants_people">参会人</string>
    <string name="participants_all">全部</string>
    <string name="participants_mute">静音</string>
    <string name="participants_host">主持人</string>
    <string name="participants_guest">参会人</string>
    <string name="participants_sharing">演示中...</string>
    <string name="participants_calling">呼叫中...</string>
    <string name="participants_waiting">等待进入...</string>
    <string name="participants_sure">确定</string>
    <string name="participants_cancel">取消</string>
    <string name="participants_allow">允许</string>
    <string name="participants_refuse">拒绝</string>
    <string name="participants_invite">邀请</string>
    <string name="participants_mute_all">全体静音</string>
    <string name="participants_mute_all_cancel">取消全体静音</string>
    <string name="participants_lock_conference">锁定会议</string>
    <string name="participants_lock_conference_cancel">取消锁定会议</string>
    <string name="participants_disconnect_all">结束会议</string>
    <string name="participants_conference_has_end">会议已结束</string>
    <string name="participants_change_name">改名</string>
    <string name="participants_remove">移除</string>
    <string name="participants_set_host">设为主持人</string>
    <string name="participants_set_guest">设为参会者</string>
    <string name="participants_sure_remove">确定将\"%1$s\"移除？</string>
    <string name="participants_sure_end_meeting">您确定要结束此次会议吗？</string>
    <string name="participants_wechat">微信</string>
    <string name="participants_copy_link">复制链接</string>
    <string name="participants_contacts">通讯录</string>
    <string name="toast_mute_all">静音当前访客及后续入会访客</string>
    <string name="toast_cancel_mute_all">取消全体静音</string>
    <string name="toast_lock_conference">会议已锁定</string>
    <string name="toast_slippery">不能再划了</string>
    <string name="toast_join_mute">静音已开启</string>
    <string name="permission_tips">提示</string>
    <string name="permission_message_no_record_audio">麦克风被禁用，请在本机的\"设置\"中允许%1$s访问您的麦克风</string>
    <string name="permission_message_no_camera">照相机被禁用，请在本机的\"设置\"中允许%1$s访问您的照相机</string>
    <string name="permission_cancel">取消</string>
    <string name="permission_go">前往</string>
    <string name="unlogin_setting">设置</string>
    <string name="unlogin_join">加入会议</string>
    <string name="unlogin_has_account">已有账号？</string>
    <string name="unlogin_login">去登录</string>
    <string name="history_anonymous_number">匿名号码</string>
    <string name="history_yesterday">昨天</string>
    <string name="history_anonymous_can_not_call">匿名号码无法呼叫</string>
    <string name="login_title">登录</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_login">登  录</string>
    <string name="login_input_account">请输入账号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_incorrect_account_or_password">账号或者密码不正确</string>
    <string name="login_unable_register_server">无法注册到服务器</string>
    <string name="login_login_ing">登录中</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_find">去找回</string>
    <string name="main_home">主页</string>
    <string name="main_address_list">通讯录</string>
    <string name="main_schedule">日程</string>
    <string name="main_mine">我的</string>
    <string name="main_mine_yitong">我的</string>
    <string name="main_no_network">无法连接服务器，请检查网络设置</string>
    <string name="main_have_not_login">没有登录</string>
    <string name="main_request_system_alert_window">请求获取悬浮窗权限</string>
    <string name="main_set_url">未配置服务器地址，请前往配置。</string>
    <string name="main_cancel">取消</string>
    <string name="main_go_set_url">前往</string>
    <string name="main_go_setting">去设置</string>
    <string name="main_no_camera_permission">无摄像头权限</string>
    <string name="main_no_audio_permission">无音频权限</string>
    <string name="main_no_read_external_storage_permission">无读取内存卡权限</string>
    <string name="main_no_read_phone_state_permission">无读取电话状态权限</string>
    <string name="main_no_system_alert_window_permission">没有系统弹框权限</string>
    <string name="main_tips">提示</string>
    <string name="main_tips_no_new_version">当前版本已是最新版本</string>
    <string name="main_find_new_version">发现新版本</string>
    <string name="main_update_now">，马上去更新？</string>
    <string name="main_update">更新</string>
    <string name="main_ignore">忽略</string>
    <string name="main_version_update">版本更新</string>
    <string name="main_downloading">正在下载中：</string>
    <string name="main_history">最近呼叫</string>
    <string name="home_join_meet">加入会议</string>
    <string name="home_sponsor_meet">发起会议</string>
    <string name="home_arrange_meet">预约会议</string>
    <string name="home_manage_meet">主持会议</string>
    <string name="home_watch_live">观看直播</string>
    <string name="home_create_live">创建直播</string>
    <string name="sponsor_sponsor_meet">发起会议</string>
    <string name="sponsor_my_meeting">我的云会议室</string>
    <string name="sponsor_start_meeting">开始会议</string>
    <string name="sponsor_meeting_setting">会议室设置</string>
    <string name="sponsor_share_meet">发送会议邀请</string>
    <string name="sponsor_wechat_friend">微信好友</string>
    <string name="sponsor_sms">短信</string>
    <string name="sponsor_copy_link">复制链接</string>
    <string name="sponsor_get_link_fail">链接获取失败</string>
    <string name="sponsor_copy_link_success">链接复制成功！</string>
    <string name="sponsor_no_meeting">您当前没有私人会议室</string>
    <string name="join_join_meet">加入会议</string>
    <string name="join_input_meet_number">请输入会议号码</string>
    <string name="join_input_display_name">请输入会议中显示的姓名</string>
    <string name="join_join">加入</string>
    <string name="join_mute">入会时静音</string>
    <string name="join_address_wrong">无效的号码或地址！</string>
    <string name="join_conference_locked">会议已锁定，不允许入会</string>
    <string name="join_call_yourself">您呼叫的是自己</string>
    <string name="join_not_in_network">对方未入网！</string>
    <string name="join_other_address_wrong">对方账号异常！</string>
    <string name="join_meet_password">会议密码</string>
    <string name="join_input_password">请输入密码</string>
    <string name="join_input_meet_password">请输入会议密码</string>
    <string name="join_host_password">主持人密码</string>
    <string name="join_input_host_password">请输入主持人密码</string>
    <string name="join_password_wrong">密码输入错误</string>
    <string name="join_tip_login_and_stop_meet">主持人正在召开其他会议，如果您是主持人请先登录并结束正在召开的会议</string>
    <string name="join_login">登录</string>
    <string name="join_tip_stop_meet">您有另外一个会议正在进行，如果想开启新会议请点击"结束"按钮结束另外一个会议</string>
    <string name="join_tip_try_later">主持人正在召开其他会议，请稍后再试！</string>
    <string name="join_i_know">我知道了</string>
    <string name="join_end">结束</string>
    <string name="join_select_role">轻触图标份选择入会身</string>
    <string name="join_host">我是主持人</string>
    <string name="join_guest">我是参会人</string>
    <string name="join_cancel">取消</string>
    <string name="join_sure">确定</string>
    <string name="incoming_call">正在呼叫您</string>
    <string name="incoming_refuse">拒绝</string>
    <string name="incoming_accept">接受</string>
    <string name="meeting_user_not_answer">对方未应答或不可达</string>
    <string name="meeting_call_end">通话结束</string>
    <string name="meeting_network_break">网络中断</string>
    <string name="meeting_please_call_again">请重新呼叫</string>
    <string name="meeting_sure">确定</string>
    <string name="meeting_bluetooth_disconnect">蓝牙已断开</string>
    <string name="meeting_bluetooth_connect">蓝牙已连接</string>
    <string name="meeting_no_bluetooth_device">获取蓝牙设备超时！</string>
    <string name="meeting_in_progress">会议进行中</string>
    <string name="manage_join_manage_meet">主持会议</string>
    <string name="manage_join_input_meet_number">请输入会议号码</string>
    <string name="manage_join_input_host_password">请输入主持密码</string>
    <string name="manage_join_sure">确定</string>
    <string name="manage_join_password_wrong">密码输入错误</string>
    <string name="manage_join_address_wrong">无效的号码或地址！</string>
    <string name="manage_manage_meet">管理会议</string>
    <string name="manage_all">全部</string>
    <string name="manage_mute">静音</string>
    <string name="manage_record">录制</string>
    <string name="manage_live">开启直播</string>
    <string name="manage_mute_all">全体静音</string>
    <string name="manage_more">更多</string>
    <string name="manage_no_record">当前会议室暂未开通录制服务</string>
    <string name="manage_no_living">当前会议室暂未开通直播服务</string>
    <string name="manage_record_has_start">录制已开启</string>
    <string name="manage_living_has_start">直播已开启</string>
    <string name="manage_mute_all_guest">静音当前访客以及后续入会访客</string>
    <string name="manage_meet_locked">会议已锁定</string>
    <string name="manage_no_host">主持人未入场\n不能进行该操作</string>
    <string name="manage_set_host">设为主持人</string>
    <string name="manage_set_guest">设为访客</string>
    <string name="manage_input_new_name">请输入新的名称</string>
    <string name="manage_sure">确定</string>
    <string name="manage_cancel">取消</string>
    <string name="manage_host">主持人</string>
    <string name="manage_guest">访客</string>
    <string name="manage_wait_for_join">等待进入会议...</string>
    <string name="manage_inviting">邀请中...</string>
    <string name="manage_video_layout">视频布局</string>
    <string name="manage_lock_meet">锁定会议</string>
    <string name="manage_end_meet">结束会议</string>
    <string name="manage_layout">布局</string>
    <string name="manage_host_layout">主持人\n布局</string>
    <string name="manage_guest_layout">访客\n布局</string>
    <string name="manage_tips">提示</string>
    <string name="manage_sure_end_meet">您确定要结束此次会议吗？</string>
    <string name="manage_change_name">改名</string>
    <string name="manage_remove">移除</string>
    <string name="manage_invite_select_participants">选择参会人</string>
    <string name="manage_invite_cancel">取消</string>
    <string name="manage_invite_sure">确定</string>
    <string name="manage_invite_search">搜索</string>
    <string name="manage_invite_busy">忙碌中...</string>
    <string name="manage_invite_failed">邀请失败</string>
    <string name="manage_invite_delete">删除</string>
    <string name="arrange_arrange_meet">预约会议</string>
    <string name="arrange_submit">提交</string>
    <string name="arrange_theme_required">主题（必填）</string>
    <string name="arrange_theme_conference">的会议</string>
    <string name="arrange_short_intro">会议简介</string>
    <string name="arrange_optional">(可选)</string>
    <string name="arrange_start">开始</string>
    <string name="arrange_end">结束</string>
    <string name="arrange_invite_participants">参会人</string>
    <string name="arrange_meetings">会议室</string>
    <string name="arrange_one_hour">1小时</string>
    <string name="arrange_zero_people">1人</string>
    <string name="arrange_hour">小时</string>
    <string name="arrange_people">人</string>
    <string name="arrange_auto_invite">自动呼叫与会人</string>
    <string name="arrange_input_theme">请输入主题</string>
    <string name="arrange_input_intro">输入会议简介</string>
    <string name="arrange_choose_start_time">请选择开始时间</string>
    <string name="arrange_choose_end_time">请选择结束时间</string>
    <string name="arrange_choose_duration">请选择会议时长</string>
    <string name="arrange_no_rooms">您选择的时间段没有可用会议室</string>
    <string name="arrange_begin_must_later_current">开始时间必须大于当前时间</string>
</resources>