<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zj_participants_pop_bg">

    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="139dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ios_pop_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/participants_change_name"
            android:textColor="@color/text_color_333333"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="238dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:background="@drawable/pop_change_name_edit_bg"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:maxLength="32"
            android:textColor="@color/zj_black"
            android:textColorHint="@color/text_color_CACACF"
            android:textSize="13sp"
            android:imeOptions="flagNoExtractUi"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="44dp"
            android:background="@color/color_D9D9D9"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="134.5dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/participants_cancel"
                android:textColor="@color/text_color_828383"
                android:textSize="16sp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_D9D9D9"/>

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="134.5dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/participants_sure"
                android:textColor="@color/text_color_blue"
                android:textSize="16sp"/>

        </LinearLayout>
        
    </RelativeLayout>

</RelativeLayout>