<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/iv_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:src="@mipmap/icon_voice"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/iv_voice"
        android:text="名字"
        android:textSize="16sp"
        android:textColor="@color/zj_participants_text_color_black2"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/tv_display_name"
        android:layout_marginLeft="10dp"
        android:text="主持人"
        android:textSize="12sp"
        android:textColor="@color/zj_participants_text_color_blue"/>

    <ImageView
        android:id="@+id/iv_is_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:src="@mipmap/tabbar_btn01_c"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@drawable/shape_red_bg"
        android:text="@string/participants_cancel"
        android:textSize="14sp"
        android:textColor="@color/zj_participants_white"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/ll_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/shape_green_bg"
            android:text="@string/participants_allow"
            android:textSize="14sp"
            android:textColor="@color/zj_participants_white"/>

        <TextView
            android:id="@+id/tv_refuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/shape_red_bg"
            android:text="@string/participants_refuse"
            android:textSize="14sp"
            android:textColor="@color/zj_participants_white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/color_B2B2B2"/>

</RelativeLayout>